Example_registry/namespace_registry.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-registry
  labels:
    environment: registry
