Example_registry/policy_registry_binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "policy-registry-binding"
spec:
  policyName: "policy-registry"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: registry
